--- a/CryptSpeak/CryptSpeak.csproj
+++ b/CryptSpeak/CryptSpeak.csproj
@@ -60,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DESEncryptor.cs" />
+    <Compile Include="Encrytor.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
