--- a/CryptSpeak/CryptSpeak.csproj
+++ b/CryptSpeak/CryptSpeak.csproj
@@ -60,7 +60,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DESEncryptor.cs" />
-    <Compile Include="Encrytor.cs" />
+    <Compile Include="EncryptionManager.cs" />
+    <Compile Include="Encryptor.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -114,6 +115,7 @@
   <ItemGroup>
     <Content Include="Key1.txt" />
     <Content Include="Key2.txt" />
+    <Content Include="Nunce1.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
